--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -5,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="HAICREAM - Jasa Desain Grafis">
   <title>HAICREAM - Jasa Desain Grafis</title>
-
   <style>
     :root {
       --primary: #25D366;
@@ -54,15 +54,66 @@
       border-radius: 20px;
       box-shadow: 0 4px 18px rgba(34, 34, 34, 0.10);
     }
-    .hero h2 {
-      font-size: 2rem;
-      color: #128C7E;
-      margin-bottom: 18px;
+    .profile-card {
+      background: #eafff3;
+      border-radius: 16px;
+      box-shadow: 0 4px 16px rgba(34, 34, 34, 0.10);
+      display: inline-block;
+      padding: 24px 30px 18px 30px;
+      margin-bottom: 22px;
+      border: 2px solid #25D366;
+      text-align: center;
     }
-    .hero p {
-      font-size: 1.07rem;
-      margin-bottom: 26px;
-      color: #333;
+    .profile-avatar {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 14px;
+      border: 2px solid #25D366;
+      background: #fff;
+    }
+    .profile-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 8px;
+    }
+    .profile-row {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      justify-content: center;
+    }
+    .profile-label {
+      font-weight: bold;
+      color: #128C7E;
+      font-size: 1.14rem;
+    }
+    .profile-value {
+      font-size: 1.14rem;
+      color: #222;
+    }
+    @media (max-width: 700px) {
+      .hero, .order {
+        margin: 28px 8px 0 8px;
+        padding: 30px 8px 28px 8px;
+        border-radius: 12px;
+      }
+      header, footer {
+        border-radius: 0;
+      }
+      #orderForm {
+        max-width: 100%;
+      }
+      .profile-card {
+        padding: 16px 10px 12px 10px;
+      }
+      .profile-avatar {
+        width: 60px;
+        height: 60px;
+      }
     }
     .btn {
       display: inline-block;
@@ -159,19 +210,6 @@
       border-top-right-radius: 20px;
       box-shadow: 0 -2px 10px rgba(34, 34, 34, 0.07);
     }
-    @media (max-width: 700px) {
-      .hero, .order {
-        margin: 28px 8px 0 8px;
-        padding: 30px 8px 28px 8px;
-        border-radius: 12px;
-      }
-      header, footer {
-        border-radius: 0;
-      }
-      #orderForm {
-        max-width: 100%;
-      }
-    }
   </style>
 </head>
 <body>
@@ -181,6 +219,21 @@
   </header>
 
   <section class="hero">
+    <div class="profile-card">
+      <img src="file:///C:/Users/MyBook%20Z%20Series/OneDrive/Desktop/Y.A.3104/HAICREM.png" class="profile-avatar">
+      <div class="profile-info">
+        <div class="profile-row">
+          <span class="profile-label">Nama:</span>
+          <span class="profile-value">haicream</span>
+        </div>
+        <div class="profile-row">
+          <span class="profile-label">Nomor HP:</span>
+          <span class="profile-value">
+            <a href="https://wa.me/6281545078977" target="_blank">+6281545078977</a>
+          </span>
+        </div>
+      </div>
+    </div>
     <h2>Promosi Desain Grafis</h2>
     <p>Kami menyediakan jasa desain logo, brosur, media sosial, dan lainnya.</p>
     <a href="https://wa.me/6281545078977" target="_blank" class="btn hero-btn">Hubungi Kami</a>
@@ -190,7 +243,7 @@
     <h2>Formulir Pemesanan</h2>
     <form id="orderForm">
       <label>Nama:</label>
-      <input type="text" id="nama" required>
+      <input type="text" id="nama" required value="haicream">
 
       <label>Email:</label>
       <input type="email" id="email" required>
@@ -240,7 +293,7 @@
 
         const fileInfo = fileUpload ? `\nFile: ${fileUpload.name}\n(Silakan upload file ini secara manual di chat WA setelah pesan terkirim)` : '';
 
-        const nomorWA = '6281545078977'; // ganti sesuai nomor kamu
+        const nomorWA = '6281545078977';
         const text = `Halo HAICREAM,%0ASaya ingin memesan desain:%0A%0ANama: ${nama}%0AEmail: ${email}%0AJenis Desain: ${jenis}%0ADeskripsi: ${deskripsi}%0A${encodeURIComponent(fileInfo)}`;
         const url = `https://wa.me/${nomorWA}?text=${text}`;
         window.open(url, '_blank');
